# serializer version: 1
# name: TestJSONExtractToMaterializedColumn.test_event_property_chain_access_uses_mat_column
  '''
  SELECT nullIf(nullIf(events.`mat_$browser`, ''), 'null') AS `$browser`
  FROM events
  WHERE equals(events.team_id, 99999)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestJSONExtractToMaterializedColumn.test_lazy_persons_table_property_rewritten_to_mat_column
  '''
  SELECT persons.`properties___$browser`
  FROM
    (SELECT person.id AS id,
            nullIf(nullIf(person.`pmat_$browser`, ''), 'null') AS `properties___$browser`
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))
                                                    LIMIT 101
                                                    OFFSET 0))) SETTINGS optimize_aggregation_in_order=1) AS persons
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestJSONExtractToMaterializedColumn.test_person_chain_access_joined_uses_mat_column
  '''
  SELECT events__person.`properties___$browser` AS `$browser`
  FROM events
  LEFT OUTER JOIN
    (SELECT tupleElement(argMax(tuple(person_distinct_id_overrides.person_id), person_distinct_id_overrides.version), 1) AS person_id,
            person_distinct_id_overrides.distinct_id AS distinct_id
     FROM person_distinct_id_overrides
     WHERE equals(person_distinct_id_overrides.team_id, 99999)
     GROUP BY person_distinct_id_overrides.distinct_id
     HAVING equals(tupleElement(argMax(tuple(person_distinct_id_overrides.is_deleted), person_distinct_id_overrides.version), 1), 0) SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id)
  LEFT JOIN
    (SELECT person.id AS id,
            nullIf(nullIf(person.`pmat_$browser`, ''), 'null') AS `properties___$browser`
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id)
  WHERE equals(events.team_id, 99999)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestJSONExtractToMaterializedColumn.test_person_on_events_chain_access_uses_mat_column
  '''
  SELECT nullIf(nullIf(events.`mat_pp_$browser`, ''), 'null') AS `$browser`
  FROM events
  WHERE equals(events.team_id, 99999)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestJSONExtractToMaterializedColumn.test_person_on_events_property_rewritten_to_mat_column
  '''
  SELECT nullIf(nullIf(events.`mat_pp_$browser`, ''), 'null') AS `nullIf(nullIf(mat_pp_$browser, ''), 'null')`
  FROM events
  WHERE equals(events.team_id, 99999)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestJSONExtractToMaterializedColumn.test_persons_table_chain_access_uses_mat_column
  '''
  SELECT persons.`properties___$browser` AS `$browser`
  FROM
    (SELECT person.id AS id,
            nullIf(nullIf(person.`pmat_$browser`, ''), 'null') AS `properties___$browser`
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))
                                                    LIMIT 101
                                                    OFFSET 0))) SETTINGS optimize_aggregation_in_order=1) AS persons
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestJSONExtractToMaterializedColumn.test_persons_table_property_rewritten_to_mat_column
  '''
  SELECT nullIf(nullIf(person.`pmat_$browser`, ''), 'null') AS `nullIf(nullIf(pmat_$browser, ''), 'null')`
  FROM person
  WHERE equals(person.team_id, 99999)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestJSONExtractToMaterializedColumn.test_rewrite_value_semantics_no_mat_column
  '''
  SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'tag'), ''), 'null'), '^"|"$', '') AS tag,
         JSONExtractString(events.properties, '$browser') AS `JSONExtractString(properties, '$browser')`
  FROM events
  WHERE and(equals(events.team_id, 99999), equals(events.event, 'pageview'))
  ORDER BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'tag'), ''), 'null'), '^"|"$', '') ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestJSONExtractToMaterializedColumn.test_rewrite_value_semantics_non_nullable_mat_column
  '''
  SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'tag'), ''), 'null'), '^"|"$', '') AS tag,
         nullIf(nullIf(events.`mat_$browser`, ''), 'null') AS `nullIf(nullIf(mat_$browser, ''), 'null')`
  FROM events
  WHERE and(equals(events.team_id, 99999), equals(events.event, 'pageview'))
  ORDER BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'tag'), ''), 'null'), '^"|"$', '') ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestJSONExtractToMaterializedColumn.test_rewrite_value_semantics_nullable_mat_column
  '''
  SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'tag'), ''), 'null'), '^"|"$', '') AS tag,
         events.`mat_$browser`
  FROM events
  WHERE and(equals(events.team_id, 99999), equals(events.event, 'pageview'))
  ORDER BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'tag'), ''), 'null'), '^"|"$', '') ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestPropertyTypes.test_data_warehouse_person_property_types
  '''
  
  SELECT persons__extended_properties.string_prop AS string_prop, persons__extended_properties.int_prop AS int_prop, accurateCastOrNull(transform(toString(persons__extended_properties.bool_prop), %(hogql_val_8)s, %(hogql_val_9)s, NULL), %(hogql_val_10)s) AS bool_prop
  FROM (
    SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '')), person.version), 1) AS persons___properties___email, person.id AS id
    FROM person
    WHERE equals(person.team_id, 420)
    GROUP BY person.id
    HAVING and(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), less(tupleElement(argMax(tuple(toTimeZone(person.created_at, %(hogql_val_1)s)), person.version), 1), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))))
    SETTINGS optimize_aggregation_in_order=1) AS persons LEFT JOIN (
    SELECT extended_properties.string_prop AS string_prop, extended_properties.int_prop AS int_prop, extended_properties.bool_prop AS bool_prop, string_prop AS persons__extended_properties___string_prop
    FROM s3(%(hogql_val_3_sensitive)s, %(hogql_val_6_sensitive)s, %(hogql_val_7_sensitive)s, %(hogql_val_4)s, %(hogql_val_5)s) AS extended_properties) AS persons__extended_properties ON equals(persons.persons___properties___email, persons__extended_properties.persons__extended_properties___string_prop)
  WHERE ifNull(equals(bool_prop, 1), 0)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_group_boolean_property_types
  '''
  
  SELECT ifNull(equals(accurateCastOrNull(transform(toString(events__group_0.properties___group_boolean), %(hogql_val_2)s, %(hogql_val_3)s, NULL), %(hogql_val_4)s), 1), 0), ifNull(equals(accurateCastOrNull(transform(toString(events__group_0.properties___group_boolean), %(hogql_val_5)s, %(hogql_val_6)s, NULL), %(hogql_val_7)s), 0), 0), isNull(accurateCastOrNull(transform(toString(events__group_0.properties___group_boolean), %(hogql_val_8)s, %(hogql_val_9)s, NULL), %(hogql_val_10)s))
  FROM events LEFT JOIN (
    SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '')), toTimeZone(groups._timestamp, %(hogql_val_1)s)), 1) AS properties___group_boolean, groups.group_type_index AS index, groups.group_key AS key
    FROM groups
    WHERE and(equals(groups.team_id, 420), equals(index, 0))
    GROUP BY groups.group_type_index, groups.group_key) AS events__group_0 ON equals(events.`$group_0`, events__group_0.key)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_group_property_types
  '''
  
  SELECT accurateCastOrNull(events__group_0.properties___inty, %(hogql_val_2)s) AS inty
  FROM events LEFT JOIN (
    SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '')), toTimeZone(groups._timestamp, %(hogql_val_1)s)), 1) AS properties___inty, groups.group_type_index AS index, groups.group_key AS key
    FROM groups
    WHERE and(equals(groups.team_id, 420), equals(index, 0))
    GROUP BY groups.group_type_index, groups.group_key) AS events__group_0 ON equals(events.`$group_0`, events__group_0.key)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_combined
  '''
  
  SELECT multiply(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_4)s), ''), 'null'), '^"|"$', ''), %(hogql_val_5)s), events__person.properties___tickets)
  FROM events LEFT OUTER JOIN (
    SELECT tupleElement(argMax(tuple(person_distinct_id_overrides.person_id), person_distinct_id_overrides.version), 1) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id
    FROM person_distinct_id_overrides
    WHERE equals(person_distinct_id_overrides.team_id, 420)
    GROUP BY person_distinct_id_overrides.distinct_id
    HAVING equals(tupleElement(argMax(tuple(person_distinct_id_overrides.is_deleted), person_distinct_id_overrides.version), 1), 0)
    SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
    SELECT tupleElement(argMax(tuple(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s)), person.version), 1) AS properties___tickets, person.id AS id
    FROM person
    WHERE equals(person.team_id, 420)
    GROUP BY person.id
    HAVING and(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), less(tupleElement(argMax(tuple(toTimeZone(person.created_at, %(hogql_val_2)s)), person.version), 1), plus(now64(6, %(hogql_val_3)s), toIntervalDay(1))))
    SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_event
  '''
  
  SELECT multiply(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s), accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), %(hogql_val_3)s)), accurateCastOrNull(transform(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_4)s), ''), 'null'), '^"|"$', '')), %(hogql_val_5)s, %(hogql_val_6)s, NULL), %(hogql_val_7)s) AS bool
  FROM events
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_event_person_poe_off
  '''
  
  SELECT events__person.properties___provided_timestamp AS provided_timestamp
  FROM events LEFT OUTER JOIN (
    SELECT tupleElement(argMax(tuple(person_distinct_id_overrides.person_id), person_distinct_id_overrides.version), 1) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id
    FROM person_distinct_id_overrides
    WHERE equals(person_distinct_id_overrides.team_id, 420)
    GROUP BY person_distinct_id_overrides.distinct_id
    HAVING equals(tupleElement(argMax(tuple(person_distinct_id_overrides.is_deleted), person_distinct_id_overrides.version), 1), 0)
    SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
    SELECT tupleElement(argMax(tuple(parseDateTime64BestEffortOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), 6, %(hogql_val_1)s)), person.version), 1) AS properties___provided_timestamp, person.id AS id
    FROM person
    WHERE equals(person.team_id, 420)
    GROUP BY person.id
    HAVING and(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), less(tupleElement(argMax(tuple(toTimeZone(person.created_at, %(hogql_val_2)s)), person.version), 1), plus(now64(6, %(hogql_val_3)s), toIntervalDay(1))))
    SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_event_person_poe_on
  '''
  
  SELECT parseDateTime64BestEffortOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.person_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), 6, %(hogql_val_1)s) AS provided_timestamp
  FROM events
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_person
  '''
  
  SELECT accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s) AS tickets, parseDateTime64BestEffortOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), 6, %(hogql_val_3)s) AS provided_timestamp, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_4)s), ''), 'null'), '^"|"$', '') AS `$initial_browser`
  FROM person
  WHERE equals(person.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_person_raw
  '''
  
  SELECT accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s) AS tickets, parseDateTime64BestEffortOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), 6, %(hogql_val_3)s) AS provided_timestamp, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_4)s), ''), 'null'), '^"|"$', '') AS `$initial_browser`
  FROM person
  WHERE equals(person.team_id, 420)
  LIMIT 50000
  '''
# ---
